--- a/app/views/components/_profile_show_microposts.html.erb
+++ b/app/views/components/_profile_show_microposts.html.erb
@@ -1,11 +1,11 @@
 <% if @user.microposts.any? %>
-  <div class="card mt-3">
+  <div class="card mt-2">
       <!--<h3>Microposts (<%= @user.microposts.count %>)</h3>-->
       <div class="list-group list-group-flush" id="microposts">
-        <%= render @microposts %>
+        <%= render @profile_posts %>
       </div>
       <div id="infinite-scrolling">
-        <%= will_paginate @microposts, class: "pagination" %>
+        <%= will_paginate @profile_posts, class: "pagination" %>
       <div>
   <div>
 <% end %>
